--- a/package.json
+++ b/package.json
@@ -4,6 +4,8 @@
   "description": "Blazing-fast binary parser builder",
   "main": "lib/binary_parser.js",
   "devDependencies": {
+    "browserify": "^16.2.3",
+    "esmify": "^2.0.0",
     "istanbul": "^0.4.5",
     "mocha": "^3.5.3",
     "prettier": "^1.9.2"
@@ -13,7 +15,7 @@
     "check-fmt": "npx prettier --list-different '{lib,test,example}/**/*.js'",
     "test": "npx mocha --reporter spec",
     "cover": "npx istanbul cover --report html node_modules/.bin/_mocha",
-    "browserify": "browserify ./lib/binary_unparser.js -o binary_unparser.bundle.js"
+    "browserify": "browserify -p esmify main.js -s binary_unparser -o ./build/binary_unparser.main.bundle.js"
   },
   "keywords": [
     "binary",
@@ -35,8 +37,11 @@
     "url": "http://github.com/keichi/binary-parser.git"
   },
   "bugs": "http://github.com/keichi/binary-parser/issues",
-  "dependencies": {},
+  "dependencies": {
+    "buffer": "^5.2.1",
+    "r.js": "^1.0.3"
+  },
   "engines": {
-      "node": ">=5.10.0"
+    "node": ">=5.10.0"
   }
 }
