--- a/package.json
+++ b/package.json
@@ -4,6 +4,8 @@
   "description": "Blazing-fast binary parser builder",
   "main": "lib/binary_parser.js",
   "devDependencies": {
+    "babel-core": "^6.26.3",
+    "babel-preset-es2015": "^6.24.1",
     "browserify": "^16.2.3",
     "esmify": "^2.0.0",
     "istanbul": "^0.4.5",
@@ -13,7 +15,7 @@
   "scripts": {
     "fmt": "npx prettier --write '{lib,test,example}/**/*.js'",
     "check-fmt": "npx prettier --list-different '{lib,test,example}/**/*.js'",
-    "test": "npx mocha --reporter spec",
+    "test": "npx mocha --compilers js:babel-core/register --reporter spec",
     "cover": "npx istanbul cover --report html node_modules/.bin/_mocha",
     "browserify": "browserify -p esmify main.js -s binary_unparser -o ./build/binary_unparser.main.bundle.js"
   },
